--- a/.github/workflows/build-cockpit-zfs.yml
+++ b/.github/workflows/build-cockpit-zfs.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           set -euxo pipefail
           export DEBIAN_FRONTEND=noninteractive
-          # Enable contrib (ZFS userspace lives here on Debian)
+          # Enable contrib (so ZFS utils can be installed)
           sed -i 's/ main$/ main contrib/' /etc/apt/sources.list || true
           sed -i 's/ main$/ main contrib/' /etc/apt/sources.list.d/debian.sources || true
           apt-get update
@@ -23,8 +23,9 @@ jobs:
             git ca-certificates curl make build-essential pkg-config \
             python3 python3-dev python3-pip cython3 \
             zfsutils-linux libzfslinux-dev python3-libzfs \
-            nodejs npm jq moreutils yarnpkg cockpit
-          # Your requested symlink (container runs as root, so no sudo needed)
+            nodejs npm jq moreutils yarnpkg cockpit \
+            default-jre-headless graphviz
+          # Symlink so because of debian shenanigans
           ln -sf /usr/bin/yarnpkg /usr/local/bin/yarn
 
       - name: Checkout 45Drives/cockpit-zfs (recursive)
